<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke_width"
        android:background="@color/colorPrimary"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvIngredName"
        tools:text="@string/ingred_name"
        style="@style/RecycleViewTheame"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin_large">

        <TextView
            android:id="@+id/tvIngredQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RecycleViewTheame"
            tools:text="@string/Q" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/unit"
            android:id="@+id/tvIngredUnit"
            style="@style/RecycleViewTheame"/>
    </LinearLayout>

</LinearLayout>